11 - Ingress/dockerone-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dockerone-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Vijay: Vijayshinva Karnure";
    nginx.org/server-snippets: |
      location /test {
        return 302 bing.com;
      }
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: dockerone-service-np
          servicePort: 8080
        path: /
